@@ -2070,19 +2070,7 @@
               <additionalOptions>
                 <!-- TODO: remove -html4 option to generate html5 docs when we stop supporting JDK8 -->
                 <additionalOption>-html4</additionalOption>
-                <additionalOption>--add-exports</additionalOption>
-                <additionalOption>java.naming/com.sun.jndi.ldap=ALL-UNNAMED</additionalOption>
               </additionalOptions>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArgs combine.children="append">
-                <arg>--add-exports</arg>
-                <arg>java.naming/com.sun.jndi.ldap=ALL-UNNAMED</arg>
-              </compilerArgs>
             </configuration>
           </plugin>
         </plugins>
